don't crash on incorrect Calc matrix access (tdf#119659)

I don't actually understand this code, this is possibly patch up
a problem elsewhere, but cf0dd2113527ba0a601c5c59de7f7f44da161d21
already did this in one of the functions, so add it to the rest
that ignore the check.

Change-Id: I549917b842ba6ece93eab6415997372bd1e51792